# tinybpf

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  COMPARISON-pylibbpf.md  DEVELOPMENT.md  GUIDE.md  LICENSE  MANIFEST.in  Makefile  PLAN.md  README.md  WORKFLOWS.md  index.html  llms.txt  pyproject.toml
.github/actions/build-ebpf/: action.yml
.github/workflows/: _test-install.yml  _test-source.yml  _test-wheel.yml  build-compile-image.yml  build-libbpf.yml  build.yml  check-libbpf.yml  ci.yml  e2e-test.yml  release.yml  test-static.yml  test.yml  update-vmlinux.yml
bpf/: Makefile  minimal.bpf.c  vmlinux.h
docker/: Dockerfile  entrypoint.sh
examples/: KNOWN_ISSUES.md  README.md  network_tracker.py  process_tracker.py  xdp_filter.py
examples/basic_tracepoint/: README.md  main.py  trace_exec.bpf.c
examples/bpf/: network_tracker.bpf.c  process_tracker.bpf.c  xdp_filter.bpf.c
examples/cgroup_egress/: README.md  egress_filter.bpf.c  main.py
examples/config_map/: README.md  filter.bpf.c  main.py
examples/multi_event_types/: README.md  events.bpf.c  main.py
examples/typed_events/: README.md  main.py  process_events.bpf.c
examples/xdp_counter/: README.md  counter.bpf.c  main.py
gh-pages/: index.html
scripts/: pre-commit
src/tinybpf/: __init__.py  _buffers.py  _cli.py  _link.py  _map.py  _object.py  _program.py  _types.py  enums.py  exceptions.py  link.py  map.py  object.py  program.py
src/tinybpf/_libbpf/: __init__.py  bindings.py
tests/: __init__.py  conftest.py  test_api.py  test_btf_integration.py  test_btf_types.py  test_cli.py  test_enums.py  test_exceptions.py  test_imports.py  test_integration.py  test_load.py  test_map.py  test_maps.py  test_object.py  test_perf.py  test_programs.py  test_ringbuf.py  test_ringbuf_async.py  test_version.py
tests/bpf/: minimal.bpf.c  test_cgroup.bpf.c  test_core_fail.bpf.c  test_maps.bpf.c  test_perf.bpf.c  test_ringbuf.bpf.c  test_xdp.bpf.c  vmlinux.h
tinybpf/: index.html
