[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tinybpf"
version = "0.0.1"
description = "Minimal Python library for loading CO-RE eBPF programs"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "mypy", "ruff"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-data]
"tinybpf._libbpf" = ["*.so*"]
"tinybpf" = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/tinybpf"]
warn_return_any = false
disallow_any_generics = false
show_error_codes = true

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM", "TCH", "PTH", "RUF", "PL", "PERF"]
ignore = [
    "PLR2004",  # Magic value comparison (common in tests)
    "PLR0913",  # Too many arguments (ctypes callbacks)
    "PLR0915",  # Too many statements
    "PLW0603",  # Global statement (module-level state is legitimate)
    "RUF022",   # __all__ not sorted (semantic grouping is intentional)
    "SIM108",   # Ternary operator (readability preference)
    "SIM117",   # Combined with statements (readability preference)
    "E501",     # Line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"src/tinybpf/_object.py" = ["ARG001", "SIM105"]  # ctypes callbacks have required but unused ctx arg
"tests/*" = ["ARG001", "ARG002", "ARG005", "PLC0415", "F841", "PTH108"]

[tool.ruff.lint.isort]
known-first-party = ["tinybpf"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
